parslers-benchmark/src/tests/invalid/syntaxErr/basic/badComment.wacc
# program has missing comment declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  oops, this is supposed to be a comment
  print "Hello World!\n"
end
